tests/snapshots/integration__cli__cache_compact_help.snap
---
source: tests/cli.rs
assertion_line: 118
expression: "help(&[\"cache\", \"compact\"])"
---
Compact explicitly selected inactive caches with worthwhile reusable space

Usage: leantoken cache compact [OPTIONS] --id <CACHE_ID>

Options:
      --id <CACHE_ID>
          Exact managed cache identity (repeatable; at most eight)

      --root <PATH>
          Repository root path

          [default: .]

      --min-reclaim-bytes <BYTES>
          Minimum reusable page bytes (both benefit thresholds must pass)

          [default: 67108864]

      --min-reclaim-percent <MIN_RECLAIM_PERCENT>
          Minimum reusable page percentage (1-100)

          [default: 10]

      --max-database-bytes <BYTES>
          Maximum logical database or artifact footprint to process

          [default: 1073741824]

      --max-seconds <MAX_SECONDS>
          Cooperative per-cache deadline in seconds (1-3600)

          [default: 120]

      --dry-run
          Preview thresholds without VACUUM or checkpoints; default without --yes

  -y, --yes
          Apply eligible compaction without prompting

      --database <PATH>
          SQLite database path

      --json
          Emit compact JSON; retrieval commands use pretty JSON by default

      --tokenizer <ENCODING>
          Tokenizer used for source and protocol token accounting

          Possible values:
          - cl100k_base:   OpenAI `cl100k_base` (GPT-4, GPT-3.5-turbo, text-embedding-ada-002, ...)
          - o200k_base:    OpenAI `o200k_base` (GPT-4o, o1/o3/o4, codex-*, ...)
          - o200k_harmony: OpenAI `o200k_harmony`
          - p50k_base:     OpenAI `p50k_base` (code models, text-davinci-002/003)
          - r50k_base:     OpenAI `r50k_base` / GPT-2
          - gpt2:          GPT-2 (alias for `r50k_base`)
          - p50k_edit:     OpenAI `p50k_edit`
          - estimate:      Fast estimate: the larger of one token per four characters and the whitespace-split word count

          [default: cl100k_base]

  -h, --help
          Print help (see a summary with '-h')
