tests/snapshots/integration__cli__root_help.snap
---
source: tests/cli.rs
assertion_line: 32
expression: "help(&[])"
---
Token-budgeted repository context

Usage: leantoken [OPTIONS] <COMMAND>

Commands:
  index    Index the repository
  status   Show index status
  savings  Show source compression and full-response token accounting
  files    List, find, or glob repository paths
  search   Search the repository for terms, symbols, or references
  outline  Show the structural outline of one or more files
  read     Read a bounded source range
  history  Read, diff, or trace a symbol across Git revisions
  json     Query, summarize, or compare live JSON structures
  context  Retrieve ranked task context within a token budget
  doctor   Verify MCP identity, tools, and first-retrieval readiness
  mcp      Run the MCP server over stdio
  setup    Configure LeanToken as a global MCP server for coding clients
  remove   Remove LeanToken's global MCP server entries
  cache    Inspect or prune centrally managed repository caches
  episode  Audit existing redacted model/tool episode artifacts
  update   Update LeanToken to the latest release
  upgrade  Update LeanToken to the latest release
  help     Print this message or the help of the given subcommand(s)

Options:
      --root <PATH>
          Repository root path

          [default: .]

      --database <PATH>
          SQLite database path

      --json
          Emit compact JSON; retrieval commands use pretty JSON by default

      --tokenizer <ENCODING>
          Tokenizer used for source and protocol token accounting

          Possible values:
          - cl100k_base:   OpenAI `cl100k_base` (GPT-4, GPT-3.5-turbo, text-embedding-ada-002, ...)
          - o200k_base:    OpenAI `o200k_base` (GPT-4o, o1/o3/o4, codex-*, ...)
          - o200k_harmony: OpenAI `o200k_harmony`
          - p50k_base:     OpenAI `p50k_base` (code models, text-davinci-002/003)
          - r50k_base:     OpenAI `r50k_base` / GPT-2
          - gpt2:          GPT-2 (alias for `r50k_base`)
          - p50k_edit:     OpenAI `p50k_edit`
          - estimate:      Fast estimate: the larger of one token per four characters and the whitespace-split word count

          [default: cl100k_base]

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Advanced repository options:
      --allow-broad-root
          Allow indexing a filesystem root, home directory, or parent of home

      --include-generated
          Include known generated and package-cache directories

      --index-include <PATTERN>
          Include only repository-relative paths matched by these patterns

      --index-exclude <PATTERN>
          Exclude repository-relative paths matched by these patterns

      --max-walk-entries <COUNT>
          Maximum filesystem entries yielded by repository discovery

      --max-files <COUNT>
          Maximum files admitted to the repository index

      --max-total-source-bytes <BYTES>
          Maximum aggregate bytes admitted to the repository index

      --max-depth <DEPTH>
          Maximum repository-relative traversal depth

      --max-file-bytes <BYTES>
          Maximum bytes admitted from one file

      --max-prepare-batch-files <COUNT>
          Maximum files scheduled in one preparation batch

      --max-prepare-batch-bytes <BYTES>
          Maximum source bytes scheduled in one preparation batch

      --max-index-workers <COUNT>
          Maximum parallel file-preparation workers
