tests/snapshots/integration__cli__search_help.snap
---
source: tests/cli.rs
assertion_line: 34
expression: "help(&[\"search\"])"
---
Search the repository for terms, symbols, or references

Usage: leantoken search [OPTIONS] <QUERY>

Arguments:
  <QUERY>
          Search query

Options:
  -m, --mode <MODE>
          Search mode

          [default: auto]
          [possible values: auto, text, regex, identifier, symbol, reference]

      --root <PATH>
          Repository root path

          [default: .]

      --include <INCLUDE_PATHS>
          Include only paths matching this pattern (repeatable)

      --exclude <EXCLUDE_PATHS>
          Exclude paths matching this pattern (repeatable)

      --focus <FOCUS_PATHS>
          Focus on paths matching this pattern (repeatable)

      --max-results <MAX_RESULTS>
          Maximum number of results

      --max-tokens <MAX_TOKENS>
          Maximum tokens to return

      --context-lines <CONTEXT_LINES>
          Lines of context around each match

      --case-sensitive
          Perform a case-sensitive search

      --all-occurrences
          Return every text or regex occurrence with exact coordinates and counts

      --prefer-structural
          Prefer structural definitions when identifier channels find the same definition

      --cursor <CURSOR>
          Pagination cursor

      --database <PATH>
          SQLite database path

      --json
          Emit compact JSON; retrieval commands use pretty JSON by default

      --tokenizer <ENCODING>
          Tokenizer used for source and protocol token accounting

          Possible values:
          - cl100k_base:   OpenAI `cl100k_base` (GPT-4, GPT-3.5-turbo, text-embedding-ada-002, ...)
          - o200k_base:    OpenAI `o200k_base` (GPT-4o, o1/o3/o4, codex-*, ...)
          - o200k_harmony: OpenAI `o200k_harmony`
          - p50k_base:     OpenAI `p50k_base` (code models, text-davinci-002/003)
          - r50k_base:     OpenAI `r50k_base` / GPT-2
          - gpt2:          GPT-2 (alias for `r50k_base`)
          - p50k_edit:     OpenAI `p50k_edit`
          - estimate:      Fast estimate: the larger of one token per four characters and the whitespace-split word count

          [default: cl100k_base]

  -h, --help
          Print help (see a summary with '-h')

Advanced repository options:
      --allow-broad-root
          Allow indexing a filesystem root, home directory, or parent of home

      --include-generated
          Include known generated and package-cache directories

      --max-walk-entries <COUNT>
          Maximum filesystem entries yielded by repository discovery

      --max-files <COUNT>
          Maximum files admitted to the repository index

      --max-total-source-bytes <BYTES>
          Maximum aggregate bytes admitted to the repository index

      --max-depth <DEPTH>
          Maximum repository-relative traversal depth

      --max-file-bytes <BYTES>
          Maximum bytes admitted from one file

      --max-prepare-batch-files <COUNT>
          Maximum files scheduled in one preparation batch

      --max-prepare-batch-bytes <BYTES>
          Maximum source bytes scheduled in one preparation batch

      --max-index-workers <COUNT>
          Maximum parallel file-preparation workers
