tests/snapshots/integration__cli__setup_help.snap
---
source: tests/cli.rs
expression: "help(&[\"setup\"])"
---
Configure LeanToken as a global MCP server for coding clients

Usage: leantoken setup [OPTIONS]

Options:
      --claude
          Configure Claude Code

      --root <PATH>
          Repository root path

          [default: .]

      --cursor
          Configure Cursor

      --opencode
          Configure OpenCode

      --codex
          Configure Codex

      --gemini
          Configure Gemini CLI

      --antigravity
          Configure Antigravity

      --all
          Select every supported client

      --refresh
          Refresh existing LeanToken MCP entries without selecting new clients

      --private-runtime
          Copy the verified native executable into LeanToken's private runtime directory and register it directly instead of retaining an npx chain

  -y, --yes
          Apply without prompting; requires explicit clients, --all, or --refresh

      --dry-run
          Show the exact configuration plan without making changes

      --allow-outdated
          Permit setup from an older npx release for an intentional rollback

      --database <PATH>
          SQLite database path

      --json
          Emit compact JSON; retrieval commands use pretty JSON by default

      --tokenizer <ENCODING>
          Tokenizer used for source and protocol token accounting

          Possible values:
          - cl100k_base:   OpenAI `cl100k_base` (GPT-4, GPT-3.5-turbo, text-embedding-ada-002, ...)
          - o200k_base:    OpenAI `o200k_base` (GPT-4o, o1/o3/o4, codex-*, ...)
          - o200k_harmony: OpenAI `o200k_harmony`
          - p50k_base:     OpenAI `p50k_base` (code models, text-davinci-002/003)
          - r50k_base:     OpenAI `r50k_base` / GPT-2
          - gpt2:          GPT-2 (alias for `r50k_base`)
          - p50k_edit:     OpenAI `p50k_edit`
          - estimate:      Fast estimate: the larger of one token per four characters and the whitespace-split word count

          [default: cl100k_base]

  -h, --help
          Print help (see a summary with '-h')

Advanced repository options:
      --allow-broad-root
          Allow indexing a filesystem root, home directory, or parent of home

      --include-generated
          Include known generated and package-cache directories

      --max-walk-entries <COUNT>
          Maximum filesystem entries yielded by repository discovery

      --max-files <COUNT>
          Maximum files admitted to the repository index

      --max-total-source-bytes <BYTES>
          Maximum aggregate bytes admitted to the repository index

      --max-depth <DEPTH>
          Maximum repository-relative traversal depth

      --max-file-bytes <BYTES>
          Maximum bytes admitted from one file

      --max-prepare-batch-files <COUNT>
          Maximum files scheduled in one preparation batch

      --max-prepare-batch-bytes <BYTES>
          Maximum source bytes scheduled in one preparation batch

      --max-index-workers <COUNT>
          Maximum parallel file-preparation workers
